styling for the polling card in listing view, installed moment for time formatting, setup global css

--- a/src/lib/main.styl
+++ b/src/lib/main.styl
@@ -1,2 +1,5 @@
 $primary := #E1682F
 $secondary := #133460
+$blue-text := #225A84
+$headerFont := "Times New Roman", Times, serif
+$pageFont := 'Lato', Helvetica, Arial, sans-serif
