--- a/src/lib/global/element.styl
+++ b/src/lib/global/element.styl
@@ -9,6 +9,24 @@
 .allcap
   text-transform uppercase !important
 
+.vi-message
+  height 40px
+  display flex
+  padding 0 40px
+  align-items center
+  background $primary
+  color white
+  text-align center
+  border-radius 6px
+  max-width 500px
+  position fixed
+  margin 0 auto
+  top 20px
+  left 50%
+  z-index 9999
+  transform translateX(-50%)
+  box-shadow 0 4px 20px -4px rgba(0,0,0,0.25)
+
 .vi-row
   display flex
   flex-wrap wrap
@@ -24,3 +42,10 @@ for n in (1..12)
       flex-basis (n / 12 * 100)%
       flex-grow 0
       max-width (n / 12 * 100)%
+
+.fade-transition
+  &-enter-active, &-leave-active
+    transition: $transition
+
+  &-enter, &-leave-to
+    opacity: 0
